fix overflow x

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   scroll-behavior: smooth;
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
